@@ -79,7 +79,7 @@ fi
 %{_libdir}/*.la
 
 %changelog
-* Wed Feb 20 2013 - dgilbert at interlog dot com
+* Mon Feb 25 2013 - dgilbert at interlog dot com
 - track t10 changes
   * sg3_utils-1.36
 
