@@ -2,7 +2,7 @@ sg3-utils (1.36-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Wed, 20 Feb 2013 19:00:00 -0500
+ -- Douglas Gilbert <dgilbert@interlog.com>  Mon, 25 Feb 2013 01:00:00 -0500
 
 sg3-utils (1.35-0.1) unstable; urgency=low
 
