@@ -2,15 +2,17 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.36 [20130220] [svn: r481]
+Changelog for sg3_utils-1.36 [20130225] [svn: r482]
   - sg_lib: improve snprintf handling
   - sg_vpd: Protocol-specific port information VPD page for
     SAS SSP, persistent connection (spl3r2)
   - sg_xcopy: handle more descriptor types; handle zero
     maximum segment length; allow list IDs to be disabled;
     improve skip/seek handling
-  - sg_reset: and '--no-esc' option to stop reset escalation
+  - sg_reset: and --no-esc option to stop reset escalation
     - clean up including adding long option names
+  - sg_luns: add --test=LUNHEX option for decoding LUNs
+    - decoded luns output in decimal or hex (if -HH given)
 
 Changelog for sg3_utils-1.35 [20130117] [svn: r476]
   - sg_compare_and_write: new utility
